# learning-notebooks

./: .gitignore  .tmuxp.yaml  AGENTS.md  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
notebooks/ai_serving/fastapi/: 001_model_endpoint.py
notebooks/ai_serving/vllm/: 001_serving_concepts.py  002_paged_attention.py
notebooks/data/duckdb/: 001_vectorized_exec.py
notebooks/data/ibis/: 001_duckdb_sql.py
notebooks/data/numpy/: 001_broadcasting_strides.py
notebooks/data/pandas/: 001_dataframes.py
notebooks/data/polars/: 001_lazy_frames.py  002_query_optimizer.py
notebooks/data/pyarrow/: 001_columnar_memory.py  002_zero_copy_synergy.py
notebooks/enterprise/airflow/: 001_dag_from_scratch.py
notebooks/enterprise/kafka/: 001_event_patterns.py
notebooks/enterprise/locust/: 001_load_modeling.py
notebooks/enterprise/presidio/: 001_pii_governance.py
notebooks/ibis/: 001_duckdb_sql.py
notebooks/marimo/: 001_basics.py
notebooks/ml/faiss/: 001_ann_vector_search.py  002_ivf_quantization.py
notebooks/ml/sklearn/: 001_estimator_api.py
notebooks/ml/tokenizers/: 001_bpe_from_scratch.py
notebooks/ml/torch/: 001_autograd.py
notebooks/pandas/: 001_dataframes.py
notebooks/rich/: 001_console_rendering.py
notebooks/systems/anyio/: 001_structured_concurrency.py
notebooks/systems/cpython/: 001_bytecode_dis.py
notebooks/systems/rich/: 001_console_rendering.py
notebooks/systems/sortedcontainers/: 001_ordered_structures.py
notebooks/toolchain/curriculum/: 001_index.py
notebooks/toolchain/marimo/: 001_basics.py
notes/: NOTEBOOK_TEMPLATE.md  catalog.jsonl  coverage.md  curriculum.toml  notebook_template.py  sources.jsonl  study_plan.md  taxonomy.foot.md  taxonomy.head.md  taxonomy.md
scripts/: check_licenses.py  curriculum.py
tests/: conftest.py  test_curriculum.py
