[project]
name = "learning-notebooks"
version = "0.1.0"
description = "Learning series for Python libraries via marimo notebooks."
readme = "README.md"
requires-python = ">=3.13,<4.0"

# No runtime dependencies on purpose: every notebook carries its own
# dependencies via PEP 723 inline script metadata and runs sandboxed.
dependencies = []

[dependency-groups]
dev = [
  ### Notebooks ###
  "marimo",
  ### Lint ###
  "ruff",
  "ty",
]

[tool.ruff]
target-version = "py313"
line-length = 100  # Following cpython conventions for educational content

[tool.ruff.lint]
select = [
  "E", # pycodestyle
  "F", # pyflakes
  "I", # isort
  "UP", # pyupgrade
  "A", # flake8-builtins
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "COM", # flake8-commas
  "EM", # flake8-errmsg
  "Q", # flake8-quotes
  "PTH", # flake8-use-pathlib
  "SIM", # flake8-simplify
  "TRY", # Tryceratops
  "PERF", # Perflint
  "RUF", # Ruff-specific rules
  "D", # pydocstyle
]
ignore = [
  "COM812", # missing trailing comma, ruff format conflict
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
# marimo notebooks: cells are generated functions; the last expression in a
# cell is its rendered output, and imports are shared across cells via returns.
"notebooks/**/*.py" = [
  "B018", # "useless expression" — bare expressions are marimo cell outputs
  "D", # docstring rules don't fit generated cell functions
  "E501", # long lines in mo.md() blocks and source-reading URLs
]
"notes/notebook_template.py" = [
  "B018",
  "D",
  "E501",
]

[tool.ty.src]
include = ["notebooks", "notes"]

[tool.ty.rules]
# Notebook dependencies live in per-notebook sandbox environments (PEP 723),
# not in this repo's dev env, so imports like pandas/ibis can't resolve here.
unresolved-import = "ignore"
